rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__two-ray-values__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: "{1, 2, 3}, {-4, -5, -6}"
  class: RayValue
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Ray:
        origin:
          - 1
          - 2
          - 3
        direction:
          - -4
          - -5
          - -6
  children: []
- referent: referent-1
  name: "{inf, -inf, nan}, {0.5, 0.15625, 0.1}"
  class: RayValue
  properties:
    Attributes:
      Attributes: {}
    SourceAssetId:
      Int64: -1
    Tags:
      Tags: []
    Value:
      Ray:
        origin:
          - inf
          - -inf
          - NaN
        direction:
          - 0.5
          - 0.15625
          - 0.1
  children: []
